// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMenu should match snapshot after clicking image 1`] = `
<div
  className="flex items-center dropdown-container"
>
  <img
    alt="profile"
    className="w-6 h-6 ml-2 cursor-pointer"
    id="profile-logo"
    onClick={[Function]}
    src="undefined/images/profile.svg"
  />
  <ul
    className="dropdown -left-105"
    style={
      Object {
        "width": 150,
      }
    }
  >
    <Link
      href="/profile"
    >
      <a>
        <li>
          Account
        </li>
      </a>
    </Link>
    <li>
      Help
    </li>
    <li
      onClick={[Function]}
    >
      Logout
    </li>
  </ul>
</div>
`;

exports[`ProfileMenu should match snapshot before clicking image 1`] = `
<div
  className="flex items-center dropdown-container"
>
  <img
    alt="profile"
    className="w-6 h-6 ml-2 cursor-pointer"
    id="profile-logo"
    onClick={[Function]}
    src="undefined/images/profile.svg"
  />
</div>
`;
